--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -87,22 +87,6 @@
 %\end{etaremune}
 \end{enumerate}
 
-\subsection*{\texorpdfstring{\faBook\ 会议论文}{会议论文}}
-\begin{enumerate}
-\item
-    \Shaoqing, SD. Zuo, Y. Ren. (2018).
-    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
-    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
-\item
-    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
-    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
-    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
-\item
-    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
-    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
-    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
-\end{enumerate}
-
 %\subsection*{Papers submitted/under revision}
 \subsection*{\texorpdfstring{\faBook\ 投稿/返修论文}{投稿/返修论文}}
 \begin{enumerate}
@@ -121,7 +105,7 @@
     \Shaoqing, SD. Zuo, Y. Ren.
     A spatial database of CO$_2$ emissions and urban form fragmentation for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. 
-    (\Submitted).
+    (\Review).
 \item
     PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
@@ -156,4 +140,52 @@
 \item
     基于环境物联网数据的水源涵养监测系统. V1.0.
     \textit{登记号: 2018SR745897}. (2018).
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ 会议论文 \& 摘要}{会议论文 \& 摘要}}
+\begin{enumerate}
+\item
+    JJ. Li, YP. Liu, \Shaoqing, KY. Xiang, HX. Jiang, WQ. Chen. (2019).
+    The night light uncovers city’s weight—A case study on estimating construction materials in Fuzhou, China.
+    \textit{10th International Conference on Industrial Ecology, abstract 320}
+\item
+    {\heiti{戴劭勍}}. (2018).
+    地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战.
+    \textit{第十一届中国R语言会议, abstract}
+\item
+    \Shaoqing, SD. Zuo, Y. Ren. (2018).
+    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
+    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
+\item
+    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
+    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
+    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
+\item
+    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
+    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
+    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
+\item
+    {\heiti{戴劭勍}}, 任引, 左舒翟, 代敏, 陈盼, 王朝, 徐凌星, 祁建伟, 云国梁. (2017).
+    城市形态的PM2.5环境效应——以京津冀城市群为例.
+    \textit{第九届中国景观生态学学术研讨会, abstract}.
+\item
+    叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2017).
+    不同环境规制工具对节能减排技术创新的影响——基于中国285个地级市的面板数据.
+    \textit{2017年中国地理学会经济地理专业委员会学术年会论文摘要集, abstract}.
+\item
+    {\heiti{戴劭勍}}, 任引, 左舒翟. (2017).
+    不同分辨率的城市碳排放空间分布与城市空间形态景观破碎化之间的关系.
+    \textit{第九届现代生态学讲座, abstract}.
+\item
+    {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 陈焜. (2016).
+    基于WalkScore与CGT模型的环境犯罪学分析：以H市为例.
+    \textit{时空间行为与城市社会规划研究暨第十二次空间行为与规划研讨会, abstract}.
+\item
+    \Shaoqing, HX. Jiang, JJ. Li, QW. Xu. (2016).
+    Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District.
+    \textit{10th annual conference of International Association of China Planning, abstract 1813}.
+\item
+   \Shaoqing, HX. Jiang, JJ. Li. (2016).
+    The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
+    \textit{2016 International Low Impact Development Conference, paper 391}.
 \end{enumerate}
