--- a/cnlatex/template-zh.tex
+++ b/cnlatex/template-zh.tex
@@ -76,7 +76,7 @@
 % Name
 \name{戴}{劭勍}
 % Title
-\title{生态学硕士}
+\title{ITC在读博士}
 
 \extrainfo{
 	% Date of birth
@@ -115,13 +115,13 @@
      \input{interests}
      \input{software}
 	\nocite{*}
-	\input{publications}
      	%\printbibliography[heading=none]
 	% \printbibliography[type=article,heading=subbibliography,title={Articles}]
 	% \printbibliography[type=inbook,heading=subbibliography,title={Chapters}]
 	%\vfill
      \input{awards}
      \input{activities}
+	\input{publications}
      \input{researches}
      \input{presentation}
      \input{poster}
