--- a/cv.tex
+++ b/cv.tex
@@ -59,7 +59,7 @@
 % Name
 \name{Shaoqing}{Dai}
 % Title
-\title{M.Sc in Ecology}
+\title{Ph.D in ITC, UT}
 
 \extrainfo{
 	% Date of birth
@@ -98,13 +98,13 @@
      \input{interests}
      \input{software}
 	\nocite{*}
-	\input{publications}
      	%\printbibliography[heading=none]
 	% \printbibliography[type=article,heading=subbibliography,title={Articles}]
 	% \printbibliography[type=inbook,heading=subbibliography,title={Chapters}]
 	%\vfill
      \input{awards}
      \input{activities}
+	\input{publications}
      \input{researches}
      \input{presentation}
      \input{poster}
