--- a/publications.tex
+++ b/publications.tex
@@ -86,22 +86,6 @@
 %\end{etaremune}
 \end{enumerate}
 
-\subsection*{\texorpdfstring{\faBook\ Conference Paper}{Conference Paper}}
-\begin{enumerate}
-\item
-    \Shaoqing, SD. Zuo, Y. Ren. (2018).
-    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
-    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
-\item
-    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
-    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
-    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
-\item
-    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
-    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
-    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
-\end{enumerate}
-
 %\subsection*{Papers submitted/under revision}
 \subsection*{\texorpdfstring{\faBook\ Papers submitted/under revision}{Papers submitted/under revision}}
 \begin{enumerate}
@@ -120,7 +104,7 @@
     \Shaoqing, SD. Zuo, Y. Ren.
     A spatial database of CO$_2$ emissions and urban form fragmentation for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. 
-    (\Submitted).
+    (\Review).
 \item
     PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
@@ -156,4 +140,52 @@
 \item
     A water conservation service monitation system based on environmental IOT data. V1.0.
     \textit{RN: 2018SR745897}. (2018).
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ Conference Paper \& Abstract}{Conference Paper \& Abstract}}
+\begin{enumerate}
+\item
+    JJ. Li, YP. Liu, \Shaoqing, KY. Xiang, HX. Jiang, WQ. Chen. (2019).
+    The night light uncovers city’s weight—A case study on estimating construction materials in Fuzhou, China.
+    \textit{10th International Conference on Industrial Ecology, abstract 320}
+\item
+    \Shaoqing. (2018).
+    The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics.
+    \textit{11th Chinese R Language Conference, abstract}
+\item
+    \Shaoqing, SD. Zuo, Y. Ren. (2018).
+    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
+    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
+\item
+    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
+    Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
+    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
+\item
+    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
+    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
+    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
+\item
+    \Shaoqing, Y.Ren, SD. Zuo, M. Dai, P. Chen, Z. Wang, LX. Xu, JW. Qi, GL. Yun. (2017).
+    The Environmental Effect of Urban Form on PM2.5: A Case Study of Beijing-Tianjin-Hebei Urban Agglomerations.
+    \textit{9th Chinese Landscape Eoclogy workshop, abstract}.
+\item
+    Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2017).
+    Research on the Effects of Different Policy Tools on China’s Energy Conservation and Emissions Reduction Innovation Based on the Panel Data of 285 prefectural-level municipalities.
+    \textit{2017 annual conference of the Chinese geographical society, economic geography and Specialized Committee Abstracts Proceedings, abstract}.
+\item
+    \Shaoqing, Y.Ren, SD. Zuo. (2017).
+    The relationship between the fragmented urban form landscape and the carbon emission distribution at different resolutions.
+    \textit{9th Lecture of Modern Ecology, abstract}.
+\item
+    \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, K. Chen. (2016).
+    The environmental crime analysis based on WalkScore and CGT model, a case study of H city.
+    \textit{The Workshop of 12th Spatial Behavior and Planning \& Spatial-Temporal Behavior and Social Planning Researchg, abstract}.
+\item
+    \Shaoqing, HX. Jiang, JJ. Li, QW. Xu. (2016).
+    Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District.
+    \textit{10th annual conference of International Association of China Planning, abstract 1813}.
+\item
+   \Shaoqing, HX. Jiang, JJ. Li. (2016).
+    The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
+    \textit{2016 International Low Impact Development Conference, paper 391}.
 \end{enumerate}
