--- a/awards.tex
+++ b/awards.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faTrophy\ Awards \& Honors}{Awards \& Honors}}
+\mycvitemPP{2019.06}{China Scholarship Council(CSC)}{China}
 \mycvitemPP{2019.06}{The 2nd Grade Scholarship of Yonker Environmental Protection Scholarship}{China}
 \mycvitemPP{2019.06}{The 1st Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 3}]}{Xiamen, China}
 \mycvitemPPl{2019.01}{The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China}{China}
