--- a/cn/template-zh.Rmd
+++ b/cn/template-zh.Rmd
@@ -387,7 +387,7 @@ Q. Yang, TY. Huang, SG. Wang, JS. Li, **SQ. Dai**, S. Wright, YX. Wang, HW. Peng
 
 ### PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
 
-Atmosphere. 2019, 10(2), 55-69. doi:10.3390/atmos10020055. [SCI, IF = 2.046].
+Atmosphere. 2019, 10(2), 55. doi:10.3390/atmos10020055. [SCI, IF = 2.046].
 
 N/A
 
@@ -397,7 +397,7 @@ GL. Yun, YR. He, YT. Jiang, PF. Dou, **SQ. Dai**.
 
 ### Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models.
 
-Remote Sensing. 2018, 10(11), 1814-1832. doi:10.3390/rs10111814. [SCI, IF = 4.118].
+Remote Sensing. 2018, 10(11), 1814. doi:10.3390/rs10111814. [SCI, IF = 4.118].
 
 N/A
 
@@ -407,7 +407,7 @@ SD. Zuo, **SQ. Dai**, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF
 
 ### Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
 
-International Journal of Environmental Research and Public Health. 2018, 15(10), 2175-2198. doi:10.3390/ijerph15102175. [SCI, IF = 2.468].
+International Journal of Environmental Research and Public Health. 2018, 15(10), 2175. doi:10.3390/ijerph15102175. [SCI, IF = 2.468].
 
 N/A
 
@@ -427,7 +427,7 @@ N/A
 
 ### Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
 
-Remote Sensing. 2018, 10(4), 521-538. doi:10.3390/rs10040521. [SCI, IF = 4.118].
+Remote Sensing. 2018, 10(4), 521. doi:10.3390/rs10040521. [SCI, IF = 4.118].
 
 N/A
 
@@ -437,7 +437,7 @@ GL. Yun, SD. Zuo, **SQ. Dai**, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, 
 
 ### 不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
 
-中国人口·资源与环境. 2018, 210(02), 115-122. doi:10.12062/cpre.20170915. [CSCD, 复合影响因子=5.211].
+中国人口·资源与环境. 2018, 28(02), 115-122. doi:10.12062/cpre.20170915. [CSCD, 复合影响因子=5.211].
 
 N/A
 
