--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -31,17 +31,17 @@
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    \textit{Atmosphere}. \textit{10}(2), 55-69.
+    \textit{Atmosphere}. \textit{10}(2), 55.
     \DOI{10.3390/atmos10020055}. [SCI, IF = 2.046]
 \item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
-    \textit{Remote Sensing}. \textit{10}(11), 1814-1832.
+    \textit{Remote Sensing}. \textit{10}(11), 1814.
     \DOI{10.3390/rs10111814}. [SCI, IF = 4.118]
 \item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
-    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198.
+    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.468]
 \item
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
@@ -51,12 +51,12 @@
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
-    \textit{Remote Sensing}. \textit{10}(4), 521-538.
+    \textit{Remote Sensing}. \textit{10}(4), 521.
     \DOI{10.3390/rs10040521}. [SCI, IF = 4.118]
 \item
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
-    {\songtix{中国人口·资源与环境}}. \textit{210}(02), 115-122.
+    {\songtix{中国人口·资源与环境}}. \textit{28}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子=5.211]
 \item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
