--- a/publications.tex
+++ b/publications.tex
@@ -30,17 +30,17 @@
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    \textit{Atmosphere}. \textit{10}(2), 55-69.
+    \textit{Atmosphere}. \textit{10}(2), 55.
     \DOI{10.3390/atmos10020055}. [SCI, IF = 2.046]
 \item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
-    \textit{Remote Sensing}. \textit{10}(11), 1814-1832.
+    \textit{Remote Sensing}. \textit{10}(11), 1814.
     \DOI{10.3390/rs10111814}. [SCI, IF = 4.118]
 \item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
-    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198.
+    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.468]
 \item
     \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren. (2018).
@@ -50,12 +50,12 @@
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
-    \textit{Remote Sensing}. \textit{10}(4), 521-538.
+    \textit{Remote Sensing}. \textit{10}(4), 521.
     \DOI{10.3390/rs10040521}. [SCI, IF = 4.118]
 \item
     Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2018).
 	Research on the effects of different policy tools on China’s emissions reduction innovation.
-    \textit{China Population, Resources and Environment}. \textit{210}(02), 115-122.
+    \textit{China Population, Resources and Environment}. \textit{28}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese]
 \item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
