--- a/software.tex
+++ b/software.tex
@@ -2,3 +2,5 @@
 \mycvitemcomment{from 2018}{D3L Tool of NASA Satellite}{(The program provides a graphical interface to download satellite imagery from NASA, such as MODIS products, MERIS and more information can see \myurl{http://gisersqdai.top/D3LTool/})}
 \mycvitemcomment{from 2018}{Geographical detector in R}{(The geographical detector software based on R)}
 \mycvitemcomment{from 2018}{GitHub Paper Notebook}{(The software for notebook of papers)}
+\mycvitemcomment{from 2019}{rgeoda}{rgeoda is a R package for spatial data analysis based on libgeoda and GeoDa(contributor).}
+
