--- a/cnlatex/software.tex
+++ b/cnlatex/software.tex
@@ -2,3 +2,4 @@
 \mycvitemcomment{自2018}{D3L Tool of NASA Satellite}{(这是一个从NASA下载卫星影像如MODIS产品，MERIS和其他产品的图形界面软件,更多信息详见 \myurl{http://gisersqdai.top/D3LTool/})}
 \mycvitemcomment{自2018}{地理探测器R语言版}{(基于R开发的地理探测器)}
 \mycvitemcomment{自2018}{GitHub论文笔记}{(用于论文笔记的软件)}
+\mycvitemcomment{自2019}{rgeoda}{rgeoda是一个基于libgeoda和GeoDa的空间数据分析R包(开源贡献者)}
