--- a/awards.tex
+++ b/awards.tex
@@ -1,13 +1,13 @@
 \section{\texorpdfstring{\faTrophy\ Awards \& Honors}{Awards \& Honors}}
 \mycvitemPP{2019.06}{China Scholarship Council(CSC)}{China}
 \mycvitemPP{2019.06}{The 2nd Grade Scholarship of Yonker Environmental Protection Scholarship}{China}
-\mycvitemPP{2019.06}{The 1st Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 3}]}{Xiamen, China}
+\mycvitemPP{2019.06}{The 1st Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{No.3 in Institute}]}{Xiamen, China}
 \mycvitemPPl{2019.01}{The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China}{China}
 \mycvitemPP{2018.11}{National Scholarship for M.Sc[\textit{top 2-3\%}]}{China}
 \mycvitemPP{2018.10}{The National 3rd Prize in Urban Big Data Special Committee, Chinese Society for Urban Studies the 2nd Big Data Support Spatial Planning and Design Competition}{China}
 \mycvitemPP{2018.07}{'Applied Energy' 2018 Summer School Certification}{Beijing, China}
 \mycvitemPPl{2018.06}{Merit Students in the academic year 2017-2018, University of Chinese Academy of Sciences}{Beijing, China}
-\mycvitemPP{2018.06}{The 2nd Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 15\%}]}{Xiamen, China}
+\mycvitemPP{2018.06}{The 2nd Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{No.9 in Institute}]}{Xiamen, China}
 \mycvitemPPl{2018.06}{The 1st Scholarship of Institute of Urban Environment, Chinese Academy of Sciences}{Xiamen, China}
 \mycvitemPPl{2018.03}{The National Winning Award in National Science \& Technology Infrastructure Center, 2017 'Sharing Cup' College Student Science and Technology Resource Sharing Service Innovation Contest}{China}
 \mycvitemPP{2017.10}{'Excellent Volunteer' award of 15th User Conference of Esri China}{China}
