--- a/cnlatex/template-zh.tex
+++ b/cnlatex/template-zh.tex
@@ -76,7 +76,7 @@
 % Name
 \name{戴}{劭勍}
 % Title
-\title{ITC在读博士}
+\title{博士研究生}
 
 \extrainfo{
 	% Date of birth
@@ -92,9 +92,9 @@
 	% Website
 	\faGlobe\ \myurl{http://gisersqdai.top/mycv/}\\
      	% Address
-     \faMap\ {中国厦门市集美大道1799号, 361021}\\
+     \faMap\ {荷兰恩斯赫德亨格洛大街99号, 7514 AE}\\
      %Affiliation
-     \faBuilding\ {中国科学院城市环境研究所} 
+     \faBuilding\ {荷兰特温特大学地理信息与对地观测学院} 
 }
 % Picture
 \photo[42pt][2pt]{dsq.png}
