--- a/cv.tex
+++ b/cv.tex
@@ -59,7 +59,7 @@
 % Name
 \name{Shaoqing}{Dai}
 % Title
-\title{Ph.D in ITC, UT}
+\title{Ph.D Candidate}
 
 \extrainfo{
 	% Date of birth
@@ -75,9 +75,9 @@
 	% Website
 	\faGlobe\ \myurl{http://gisersqdai.top/mycv/}\\
      	% Address
-     \faMap\ {1799 Jimei Road, Xiamen, Fujian, 361021, China}\\
+     \faMap\ {Hengelosestraat 99, 7514AE  Enschede, Netherland}\\
      %Affiliation
-     \faBuilding\ {Institute of Urban Environment, Chinese Academy of Sciences} 
+     \faBuilding\ {Faculty of Geo-information Science and Earth Observation(ITC), University of Twente} 
 }
 % Picture
 \photo[42pt][2pt]{dsq.png}
