--- a/cnlatex/interests.tex
+++ b/cnlatex/interests.tex
@@ -1,6 +1,6 @@
 %\section*{Research Interests}
 \section{\texorpdfstring{\faInfoCircle\ 研究兴趣}{研究兴趣}}
-\cvitem{}{健康地理; 城市计算; 时空大数据; 生态模型与生态信息学; 生态学、GIS与RS集成;空间统计}
+\cvitem{}{健康地理; 空间生命历程流行病学; 城市计算; 时空大数据; 生态模型与生态信息学; 生态学、GIS与RS集成;空间统计}
 %\begin{itemize}
 %\item Urban Computing
 %\item Spatial-Temporal Big Data
