--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,15 +14,20 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    SD. Zuo, \Shaoqing, Y. Ren. (2019).
+    \Shaoqing, SD. Zuo, Y. Ren. (2020).
+    A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
+    \textit{Data in Brief}. \textit{Accepted}.
+    \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 0.93]
+\item
+    SD. Zuo, \Shaoqing, Y. Ren. (2020).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
-    \textit{Journal of Cleaner Production}. \textit{Accepted}.
+    \textit{Journal of Cleaner Production}. \textit{244}.
     \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 6.395]
 \item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
     {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子=2.544] 
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子=2.703] 
 \item
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
@@ -47,7 +52,7 @@
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
     {\songtix{地理科学}}.  \textit{38}(8), 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子=3.964]
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子=4.803]
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
@@ -57,7 +62,7 @@
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
     {\songtix{中国人口·资源与环境}}. \textit{28}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子=5.211]
+    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子=5.428]
 \item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
@@ -67,7 +72,7 @@
    李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
 	基于政府大数据的北京城市空间发展模式分析.
     {\songtix{地理信息世界}}. \textit{23}(3), 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子=0.935]
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子=1.026]
 %\end{etaremune}
 \end{enumerate}
 
@@ -102,11 +107,6 @@
     \textit{Biogeosciences}. 
     (\Review).
 \item
-    \Shaoqing, SD. Zuo, Y. Ren.
-    A spatial database of CO$_2$ emissions and urban form fragmentation for the low carbon urban system in Jinjiang city, China.
-    \textit{Data in Brief}. 
-    (\Review).
-\item
     PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
@@ -115,6 +115,11 @@
     XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
     Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
     \textit{Geoderma}.
+    (\Review).
+\item
+    SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
+    Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
+    \textit{Journal of Cleaner Production}. 
     (\Review).
 %\end{etaremune}
 \end{enumerate}
@@ -188,4 +193,12 @@
    \Shaoqing, HX. Jiang, JJ. Li. (2016).
     The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
     \textit{2016 International Low Impact Development Conference, paper 391}.
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ 开放数据 \& 代码}{开放数据 \& 代码}}
+\begin{enumerate}
+\item
+   \Shaoqing, SD. Zuo, Y.Ren. (2019).
+    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.3 (Version 0.3) .
+    [Data set]. Zenodo. http://doi.org/10.5281/zenodo.3566072.
 \end{enumerate}
