--- a/cnlatex/template-zh.tex
+++ b/cnlatex/template-zh.tex
@@ -94,7 +94,7 @@
      	% Address
      \faMap\ {荷兰恩斯赫德亨格洛大街99号, 7514 AE}\\
      %Affiliation
-     \faBuilding\ {荷兰特温特大学地理信息与对地观测学院} 
+     \faBuilding\ {荷兰特温特大学地理信息与对地观测学院对地观测科学系} 
 }
 % Picture
 \photo[42pt][2pt]{dsq.png}
