--- a/cv.tex
+++ b/cv.tex
@@ -77,7 +77,7 @@
      	% Address
      \faMap\ {Hengelosestraat 99, 7514AE  Enschede, Netherland}\\
      %Affiliation
-     \faBuilding\ {Faculty of Geo-information Science and Earth Observation(ITC), University of Twente} 
+     \faBuilding\ {Deparment of Earth Obesrvation Science, ITC, UT} 
 }
 % Picture
 \photo[42pt][2pt]{dsq.png}
