--- a/publications.tex
+++ b/publications.tex
@@ -13,9 +13,14 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    SD. Zuo, \Shaoqing, Y. Ren. (2019).
+    \Shaoqing, SD. Zuo, Y. Ren. (2020).
+    A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
+    \textit{Data in Brief}. \textit{Accepted}.
+    \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 0.93]
+\item
+    SD. Zuo, \Shaoqing, Y. Ren. (2020).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
-    \textit{Journal of Cleaner Production}. \textit{Accepted}.
+    \textit{Journal of Cleaner Production}. \textit{244}.
     \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 6.395]
 \item
     PF. Dou, SD. Zuo, Y. Ren, \Shaoqing, GL. Yun. (2019).
@@ -101,11 +106,6 @@
     \textit{Biogeosciences}. 
     (\Review).
 \item
-    \Shaoqing, SD. Zuo, Y. Ren.
-    A spatial database of CO$_2$ emissions and urban form fragmentation for the low carbon urban system in Jinjiang city, China.
-    \textit{Data in Brief}. 
-    (\Review).
-\item
     PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
@@ -114,6 +114,11 @@
     XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
     Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
     \textit{Geoderma}.
+    (\Review).
+\item
+    SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
+    Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
+    \textit{Journal of Cleaner Production}. 
     (\Review).
 
 %\end{etaremune}
@@ -188,4 +193,12 @@
    \Shaoqing, HX. Jiang, JJ. Li. (2016).
     The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
     \textit{2016 International Low Impact Development Conference, paper 391}.
+\end{enumerate}
+
+\subsection*{\texorpdfstring{\faBook\ Open Dataset \& Code}{Open Dataset \& Code}}
+\begin{enumerate}
+\item
+   \Shaoqing, SD. Zuo, Y.Ren. (2019).
+    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.3 (Version 0.3) .
+    [Data set]. Zenodo. http://doi.org/10.5281/zenodo.3566072.
 \end{enumerate}
